@@ -23,6 +23,8 @@ Revision 4.1.15a
 - Fix to protocol translator code (rfc2576) to handle Counter64 type
   in v2c-to-v1 PDU translation.
 - Fix to wrong exceptions used in pysnmp/entity modules.
+- Fix to noauth/nopriv security module so that it would not crash SNMP
+  engine if called accidentally.
 
 Revision 4.1.14a
 ----------------
